spelling mistakes corected and site area overflow bug fixed

--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 body {
     margin: 0;
     display: flex;
-    overflow: hidden;
+
+    height: 100vh;
+    /*overflow: hidden;*/
 }
  textarea {
     border: 0;
@@ -90,6 +92,7 @@ body {
     width: 400px;
     box-shadow: 0px 0px 10px #000;
     z-index: 9;
+    max-height: 100vh;
  }
  .txt-title {
     width: 100%;
@@ -150,7 +153,7 @@ body {
     padding: 18px;
     display: block!important;
     width: 100%;
-    min-height: 100vh;
+    min-height: calc(100vh - 36px);
     overflow: auto;
  }
  .active a,
